<resources>
    <string name="app_name">Amaro Best-Sellers</string>
    <string name="app_name_title">Amaro\'s \n best-sellers.</string>
    <string name="error_loading">Ops! =( \nCouldn\'t retrieve products information.</string>
    <string name="btn_try_again">Try Again</string>
    <string name="name_not_found">Name not found</string>
    <string name="price_not_found">Price not found</string>
    <string name="installments_not_found">Installments not found</string>
    <string name="size_not_found">-</string>
    <string name="details_sizes">Sizes</string>
    <string name="discount_percentage">%1$s off</string>
    <string name="filter_higher_to_lower">Filter Higher to Lower</string>
    <string name="filter_lower_to_higher">Filter Lower to Higher</string>
    <string name="clear_filters">Clear</string>
    <string name="switch_on_sale">On Sale</string>

    <!-- Accessibility Strings-->
    <string name="cd_product_image">Image that shows the product photo.</string>
    <string name="cd_filter_image">Image that shows an clickable icon that show product filters.</string>
</resources>
